# llm-ai-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  temp.txt  temp_rEHVqZoBLjA.ko.vtt
chapter04/: pdf_summary.py  pdf_to_txt.py  pdf_without_header_footer.py  summary.py
chapter05/: huggingface_whisper.ipynb  openapi_api_whisper.ipynb
chapter06/: image_explanation.ipynb  image_explanation.py
chapter07/: gpt_function.py  gpt_function_backup.py  lcel.ipynb  main.py  now.py  yfinance.ipynb
chapter09/: rag.py  rag_practice.ipynb  retriever.py
chapter10/: duckduckgo.ipynb  tavily_search.ipynb  youtube_summary.ipynb
chapter10/.ipynb_checkpoints/: youtube_summary-checkpoint.ipynb
chapter10/data/: tavily_report.md
chapter12/: langgraph_memory.py  langgraph_simple_chatbot.ipynb  langgraph_tools.ipynb
chapter13/: rag_with_langgraph.ipynb
chapter15/: book_writer.py  models.py  tools.py  utils.py
chapter15/data/: outline.md  resources_2025_0914_182321.json  resources_2025_0914_182332.json  resources_2025_0914_182344.json  resources_2025_0914_182352.json  resources_2025_0914_182359.json  state.json
chapter16/: ollama_simple_chatbot.py
chroma_store/c78059ff-a457-4177-b985-adb03b06d1e1/: index_metadata.pickle
