[project]
name = "llm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.4",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "streamlit>=1.47.1",
    "tabulate>=0.9.0",
    "yfinance>=0.2.65",
]
