[project]
name = "llm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.4",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "notebook>=7.4.5",
    "pypdf>=6.0.0",
    "streamlit>=1.47.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.11",
    "yfinance>=0.2.65",
    "youtube-search>=2.1.2",
    "youtube-transcript-api==0.6.1",
    "yt-dlp>=2025.8.22",
]
